<?xml version="1.0" encoding="UTF-8"?>
<project
        xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
        xmlns="http://maven.apache.org/POM/4.0.0"
        xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>
        4.0.0
    </modelVersion>

    <!-- ===================== -->
    <!-- Spring Boot Parent -->
    <!-- ===================== -->
    <parent>
        <groupId>
            org.springframework.boot
        </groupId>
        <artifactId>
            spring-boot-starter-parent
        </artifactId>
        <version>
            3.5.11
        </version>
        <relativePath/>
    </parent>

    <!-- ===================== -->
    <!-- Project Info -->
    <!-- ===================== -->
    <groupId>
        com.gestion.escuela
    </groupId>
    <artifactId>
        gestion-escolar
    </artifactId>
    <version>
        1.0.0
    </version>
    <name>
        gestion-escolar
    </name>
    <description>
        API
        de
        gestión
        escolar
    </description>

    <!-- ===================== -->
    <!-- Properties -->
    <!-- ===================== -->
    <properties>
        <java.version>
            21
        </java.version>
    </properties>

    <!-- ===================== -->
    <!-- Dependencies -->
    <!-- ===================== -->
    <dependencies>

        <!-- Web (REST API) -->
        <dependency>
            <groupId>
                org.springframework.boot
            </groupId>
            <artifactId>
                spring-boot-starter-web
            </artifactId>
        </dependency>
        <!-- JPA -->
        <dependency>
            <groupId>
                org.springframework.boot
            </groupId>
            <artifactId>
                spring-boot-starter-data-jpa
            </artifactId>
        </dependency>

        <dependency>
            <groupId>
                org.testcontainers
            </groupId>
            <artifactId>
                postgresql
            </artifactId>
            <scope>
                test
            </scope>
        </dependency>

        <dependency>
            <groupId>
                org.testcontainers
            </groupId>
            <artifactId>
                junit-jupiter
            </artifactId>
            <scope>
                test
            </scope>
        </dependency>

        <!-- Validation (jakarta.validation) -->
        <dependency>
            <groupId>
                org.springframework.boot
            </groupId>
            <artifactId>
                spring-boot-starter-validation
            </artifactId>
        </dependency>

        <!-- Swagger / OpenAPI -->
        <dependency>
            <groupId>
                org.springdoc
            </groupId>
            <artifactId>
                springdoc-openapi-starter-webmvc-ui
            </artifactId>
            <version>
                2.5.0
            </version>
        </dependency>

        <!-- PostgreSQL -->
        <dependency>
            <groupId>
                org.postgresql
            </groupId>
            <artifactId>
                postgresql
            </artifactId>
            <scope>
                runtime
            </scope>
        </dependency>

        <!-- Flyway -->
        <dependency>
            <groupId>
                org.flywaydb
            </groupId>
            <artifactId>
                flyway-core
            </artifactId>
            <version>
                10.22.0
            </version>
        </dependency>

        <dependency>
            <groupId>
                org.springframework.boot
            </groupId>
            <artifactId>
                spring-boot-starter-actuator
            </artifactId>
        </dependency>

        <dependency>
            <groupId>
                org.flywaydb
            </groupId>
            <artifactId>
                flyway-database-postgresql
            </artifactId>
            <version>
                10.22.0
            </version>
        </dependency>


        <dependency>
            <groupId>
                io.rest-assured
            </groupId>
            <artifactId>
                rest-assured
            </artifactId>
            <scope>
                test
            </scope>
        </dependency>

        <!-- Jackson Java Time -->
        <dependency>
            <groupId>
                com.fasterxml.jackson.datatype
            </groupId>
            <artifactId>
                jackson-datatype-jsr310
            </artifactId>
        </dependency>

        <!-- Lombok -->
        <dependency>
            <groupId>
                org.projectlombok
            </groupId>
            <artifactId>
                lombok
            </artifactId>
            <version>
                1.18.38
            </version>
            <scope>
                provided
            </scope>
        </dependency>

        <!-- Tests -->
        <dependency>
            <groupId>
                org.springframework.boot
            </groupId>
            <artifactId>
                spring-boot-starter-test
            </artifactId>
            <scope>
                test
            </scope>
        </dependency>

    </dependencies>
    <!-- ===================== -->
    <!-- Build -->
    <!-- ===================== -->
    <build>
        <plugins>

            <!-- Compiler -->
            <plugin>
                <groupId>
                    org.apache.maven.plugins
                </groupId>
                <artifactId>
                    maven-compiler-plugin
                </artifactId>
                <version>
                    3.14.0
                </version>

                <configuration>
                    <release>
                        21
                    </release>

                    <annotationProcessorPaths>
                        <path>
                            <groupId>
                                org.projectlombok
                            </groupId>
                            <artifactId>
                                lombok
                            </artifactId>
                            <version>
                                1.18.38
                            </version>
                        </path>
                    </annotationProcessorPaths>
                </configuration>
            </plugin>

            <plugin>
                <groupId>
                    org.apache.maven.plugins
                </groupId>
                <artifactId>
                    maven-surefire-plugin
                </artifactId>
                <configuration>
                    <skipTests>
                        false
                    </skipTests>
                </configuration>
            </plugin>

            <!-- Spring Boot -->
            <plugin>
                <groupId>
                    org.springframework.boot
                </groupId>
                <artifactId>
                    spring-boot-maven-plugin
                </artifactId>
                <configuration>
                    <excludes>
                        <exclude>
                            <groupId>
                                org.projectlombok
                            </groupId>
                            <artifactId>
                                lombok
                            </artifactId>
                        </exclude>
                    </excludes>
                </configuration>
            </plugin>

        </plugins>
    </build>

</project>
